--- a/app/scss/_reset.scss
+++ b/app/scss/_reset.scss
@@ -57,10 +57,6 @@ p {
   margin: $p-margin;
 }
 
-.whitespace {
-    flex: 1;
-}
-
 .underline {
       position: absolute;
       bottom: 11px;
